--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Food website",
   "main": "App.js",
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
@@ -17,10 +19,14 @@
   },
   "homepage": "https://github.com/ankushtripathii/Namaste-Food#readme",
   "devDependencies": {
-    "parcel": "^2.10.3"
+    "parcel": "^2.10.3",
+    "process": "^0.11.10"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  }
+  },
+  "browserslist": [
+    "last 2 chrome versions"
+  ]
 }
